Add improved landing page

--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Test Website</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Welcome to Scripty</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Test Website!</h1>
-    </header>
-    <main>
-        <p>This is a simple webpage created for testing purposes.</p>
-        <button id="changeColorButton">Change Background Color</button>
-    </main>
-    <footer>
-        <p>Created by Your Name</p>
-    </footer>
-    <script src="script.js"></script>
+  <header>
+    <h1>Scripty</h1>
+    <p>Your simple GitHub Pages website is live!</p>
+    <a href="#learn-more" class="btn">Learn More</a>
+  </header>
+
+  <main id="learn-more">
+    <section>
+      <h2>What is Scripty?</h2>
+      <p>Scripty is a basic template website hosted freely using GitHub Pages. Customize this page to build your portfolio, landing page, or anything you like.</p>
+    </section>
+
+    <section>
+      <h2>How it works</h2>
+      <ul>
+        <li>Hosted on GitHub</li>
+        <li>Served with HTTPS via your custom domain</li>
+        <li>100% free and open source</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Made with ❤️ using GitHub Pages</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
