--- a/index.html
+++ b/index.html
@@ -1,22 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - Scripty</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Login Page</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f0f2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  #login-container, #menu-container {
+    background: white;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    width: 300px;
+    text-align: center;
+  }
+  input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 16px;
+  }
+  button {
+    background: #007bff;
+    border: none;
+    padding: 12px 25px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.3s ease;
+  }
+  button:hover {
+    background: #0056b3;
+  }
+  #message {
+    color: red;
+    margin: 10px 0;
+    height: 20px;
+  }
+  a.download-btn {
+    display: inline-block;
+    margin-top: 20px;
+    background: #28a745;
+    color: white;
+    padding: 12px 25px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s ease;
+  }
+  a.download-btn:hover {
+    background: #1e7e34;
+  }
+</style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-      <input type="text" id="username" placeholder="Username" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit" id="login-btn">Login</button>
-      <p id="message"></p>
-    </form>
-  </div>
 
-  <script src="script.js"></script>
+<div id="login-container">
+  <h2>Login</h2>
+  <input type="text" id="username" placeholder="Username" autocomplete="off" />
+  <input type="password" id="password" placeholder="Password" autocomplete="off" />
+  <button onclick="handleLogin()">Log In</button>
+  <div id="message"></div>
+</div>
+
+<div id="menu-container" style="display:none;">
+  <h2>Welcome!</h2>
+  <p>Click below to download your file:</p>
+  <a href="run.bat" download class="download-btn">Download run.bat</a>
+</div>
+
+<script>
+const cooldownTime = 5000; // 5 seconds cooldown
+let lastAttempt = 0;
+
+async function handleLogin() {
+  const now = Date.now();
+  if (now - lastAttempt < cooldownTime) {
+    showMessage("Please wait 5 seconds before trying again.");
+    return;
+  }
+  lastAttempt = now;
+  clearMessage();
+
+  const username = document.getElementById('username').value.trim();
+  const password = document.getElementById('password').value.trim();
+
+  if (!username || !password) {
+    showMessage("Please enter username and password.");
+    return;
+  }
+
+  try {
+    const response = await fetch('https://api.jsonbin.io/v3/b/6881eeb57b4b8670d8a67ea9/latest', {
+      headers: {
+        'X-Master-Key': '$2a$10$D9MnBNmGXxinptCs1jFHUuAxy9eG2DDpq4JW/0zwUCuS06Wn9OS8u'
+      }
+    });
+    const json = await response.json();
+    const users = json.record;
+
+    let loggedIn = false;
+    for (const key in users) {
+      const user = users[key];
+      if (user.username === username && user.password === password) {
+        loggedIn = true;
+        break;
+      }
+    }
+
+    if (loggedIn) {
+      showMenu();
+    } else {
+      showMessage("Invalid username or password.");
+    }
+
+  } catch (err) {
+    showMessage("Error connecting to server.");
+    console.error(err);
+  }
+}
+
+function showMenu() {
+  document.getElementById('login-container').style.display = 'none';
+  document.getElementById('menu-container').style.display = 'block';
+}
+
+function showMessage(msg) {
+  document.getElementById('message').textContent = msg;
+}
+
+function clearMessage() {
+  document.getElementById('message').textContent = '';
+}
+</script>
+
 </body>
 </html>
