Updated index, script, and style files for frontend login and API call

--- a/index.html
+++ b/index.html
@@ -67,73 +67,6 @@
     <button id="download-btn">Download run.bat</button>
   </div>
 
-  <script>
-    const loginBtn = document.getElementById('login-btn');
-    const errorMsg = document.getElementById('error-msg');
-    const loginContainer = document.getElementById('login-container');
-    const menu = document.getElementById('menu');
-    const downloadBtn = document.getElementById('download-btn');
-
-    let cooldown = false;
-
-    async function fetchUserData() {
-      try {
-        const response = await fetch('/users');  // Your backend proxy endpoint
-        if (!response.ok) throw new Error('Failed to fetch user data');
-        const users = await response.json();
-        return users;
-      } catch (err) {
-        errorMsg.textContent = 'Server error, try again later.';
-        throw err;
-      }
-    }
-
-    function startCooldown() {
-      cooldown = true;
-      loginBtn.disabled = true;
-      setTimeout(() => {
-        cooldown = false;
-        loginBtn.disabled = false;
-      }, 5000);
-    }
-
-    loginBtn.addEventListener('click', async () => {
-      if (cooldown) return;
-      errorMsg.textContent = '';
-
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-
-      if (!username || !password) {
-        errorMsg.textContent = 'Please fill in both fields.';
-        return;
-      }
-
-      try {
-        const users = await fetchUserData();
-
-        // users structure: { "someid": { username, password, hwid } }
-        const userEntry = Object.values(users).find(
-          (user) => user.username === username && user.password === password
-        );
-
-        if (userEntry) {
-          // Login success
-          loginContainer.style.display = 'none';
-          menu.style.display = 'block';
-        } else {
-          errorMsg.textContent = 'Invalid username or password.';
-          startCooldown();
-        }
-      } catch {
-        // errorMsg already set in fetchUserData()
-      }
-    });
-
-    downloadBtn.addEventListener('click', () => {
-      // Download run.bat from the root (make sure run.bat is in your GitHub Pages or server root)
-      window.location.href = 'run.bat';
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
