--- a/index.html
+++ b/index.html
@@ -1,60 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login - Scripty</title>
-  <style>
-    body {
-      background: #4b0082;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    #login-container, #menu {
-      background: #6a0dad;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #32006a;
-      width: 300px;
-      text-align: center;
-    }
-    input {
-      width: 90%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      border: none;
-      border-radius: 4px;
-      font-size: 1rem;
-    }
-    button {
-      background: #b19cd9;
-      border: none;
-      color: #4b0082;
-      padding: 0.7rem 1.2rem;
-      font-weight: bold;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 1rem;
-      font-size: 1rem;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #d1c4e9;
-    }
-    #error-msg {
-      color: #ff6b6b;
-      margin-top: 0.5rem;
-      min-height: 1.2rem;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="login-container">
+  <!-- Login Form -->
+  <div class="login-container" id="login-container">
     <h2>Login</h2>
     <input id="username" type="text" placeholder="Username" autocomplete="off" />
     <input id="password" type="password" placeholder="Password" autocomplete="off" />
@@ -62,7 +16,8 @@
     <div id="error-msg"></div>
   </div>
 
-  <div id="menu" style="display:none;">
+  <!-- Menu after login -->
+  <div class="menu-container" id="menu-container" style="display: none;">
     <h2>Welcome!</h2>
     <button id="download-btn">Download run.bat</button>
   </div>
