Added login functionality and download button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="error-msg"></div>
   </div>
 
-  <!-- Menu after login -->
+  <!-- Menu with Download Button -->
   <div class="menu-container" id="menu-container" style="display: none;">
     <h2>Welcome!</h2>
     <button id="download-btn">Download run.bat</button>
