--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Menu with Download Button -->
   <div class="menu-container" id="menu-container" style="display: none;">
-    <h2>Welcome!</h2>
+    <h2>You can download run.bat here</h2>
     <button id="download-btn">Download run.bat</button>
   </div>
 
