--- a/index.html
+++ b/index.html
@@ -3,25 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login - Scripty</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Register - Scripty</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #4b0082;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .register-container {
+      background: #6a0dad;
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+      width: 300px;
+    }
+
+    input {
+      width: 80%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 4px;
+    }
+
+    button {
+      width: 80%;
+      padding: 10px;
+      background-color: #b19cd9;
+      border: none;
+      color: #4b0082;
+      font-weight: bold;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #d1c4e9;
+    }
+
+    .error {
+      color: #ff6b6b;
+    }
+
+    .success {
+      color: #4caf50;
+    }
+  </style>
 </head>
 <body>
-  <!-- Login Form -->
-  <div class="login-container" id="login-container">
-    <h2>Login</h2>
-    <input id="username" type="text" placeholder="Username" autocomplete="off" />
-    <input id="password" type="password" placeholder="Password" autocomplete="off" />
-    <button id="login-btn">Login</button>
-    <div id="error-msg"></div>
+
+  <div class="register-container">
+    <h2>Register</h2>
+    <input type="text" id="name" placeholder="Name" />
+    <input type="password" id="password" placeholder="Password" />
+    <input type="password" id="confirm-password" placeholder="Confirm Password" />
+    <button id="register-btn">Register</button>
+    <div id="message"></div>
   </div>
 
-  <!-- Menu with Download Button -->
-  <div class="menu-container" id="menu-container" style="display: none;">
-    <h2>You can download run.bat here</h2>
-    <button id="download-btn">Download run.bat</button>
-  </div>
+  <script>
+    document.getElementById('register-btn').addEventListener('click', () => {
+      const name = document.getElementById('name').value.trim();
+      const password = document.getElementById('password').value;
+      const confirmPassword = document.getElementById('confirm-password').value;
+      const messageDiv = document.getElementById('message');
 
-  <script src="script.js"></script>
+      messageDiv.innerHTML = '';
+      
+      if (!name || !password || !confirmPassword) {
+        messageDiv.classList.add('error');
+        messageDiv.innerHTML = 'Please fill in all fields.';
+        return;
+      }
+
+      if (password !== confirmPassword) {
+        messageDiv.classList.add('error');
+        messageDiv.innerHTML = 'Passwords do not match.';
+        return;
+      }
+
+      messageDiv.classList.add('success');
+      messageDiv.innerHTML = 'Registration successful!';
+
+
+      console.log('User registered:', { name, password });
+    });
+  </script>
+
 </body>
 </html>
