--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
       margin: 0;
     }
 
+    .container {
+      text-align: center;
+    }
+
     .register-container {
+      display: none;  /* Hidden initially */
       background: #6a0dad;
       padding: 20px;
       border-radius: 8px;
       text-align: center;
       width: 300px;
+      margin: 20px auto;
     }
 
     input {
@@ -54,37 +60,53 @@
     .success {
       color: #4caf50;
     }
+
+    #register-btn {
+      background-color: #6a0dad;
+      color: white;
+      border: 2px solid white;
+    }
+
+    #register-btn:hover {
+      background-color: #b19cd9;
+    }
   </style>
 </head>
 <body>
 
-  <div class="register-container">
-    <h2>Register</h2>
-    <input type="text" id="name" placeholder="Name" />
-    <input type="password" id="password" placeholder="Password" />
-    <input type="password" id="confirm-password" placeholder="Confirm Password" />
-    <button id="register-btn">Register</button>
-    <div id="message"></div>
+  <div class="container">
+    <h2>Welcome to Scripty</h2>
+    <button id="show-register-btn">Register Here</button>  <!-- Initial small Register button -->
+    
+    <!-- Registration Form (Initially Hidden) -->
+    <div class="register-container" id="register-container">
+      <h3>Register</h3>
+      <input type="text" id="name" placeholder="Name" />
+      <input type="password" id="password" placeholder="Password" />
+      <input type="password" id="confirm-password" placeholder="Confirm Password" />
+      <button id="register-submit-btn">Register</button>
+      <div id="message"></div>
+    </div>
   </div>
 
   <script>
-    const adfghasdfgh = "CaLNIuQxh/pX5f";
-    const adfghasdfgdf = "UsZlKPkvUnJSIiB1.";
-    const asdhfsdafgh = "$2a$10$EGk.IxPEfM";
-    const asdhfsdafgf = "opz.WZYNyz7e";
-    const asdhfsdafae = "c97be91f8cc3";
-    const asdhfsdadhd = "68a02c4a43b1";
-    const API_URL = 'https://api.jsonbin.io/v3/b/' + asdhfsdadhd + asdhfsdafae + '/latest';
-    const API_KEY = asdhfsdafgh + asdhfsdafgf + adfghasdfgh + adfghasdfgdf;
+    // Show the registration form when the user clicks "Register Here"
+    document.getElementById('show-register-btn').addEventListener('click', () => {
+      document.getElementById('register-container').style.display = 'block'; // Show form
+      document.getElementById('show-register-btn').style.display = 'none'; // Hide the Register Here button
+    });
 
-    document.getElementById('register-btn').addEventListener('click', async () => {
+    // Handle user registration
+    document.getElementById('register-submit-btn').addEventListener('click', async () => {
       const name = document.getElementById('name').value.trim();
       const password = document.getElementById('password').value;
       const confirmPassword = document.getElementById('confirm-password').value;
       const messageDiv = document.getElementById('message');
 
+      // Clear previous messages
       messageDiv.innerHTML = '';
       
+      // Simple validation
       if (!name || !password || !confirmPassword) {
         messageDiv.classList.add('error');
         messageDiv.innerHTML = 'Please fill in all fields.';
@@ -97,18 +119,20 @@
         return;
       }
 
+      // Prepare user data to be sent in the API call
       const userData = {
-        [Date.now()]: { 
+        [Date.now()]: {  // Using timestamp as user ID (just for example)
           username: name,
           password: password
         }
       };
 
       try {
-        const response = await fetch(API_URL, {
-          method: 'PUT',
+        // Make the API call to store the user data
+        const response = await fetch('https://api.jsonbin.io/v3/b/68a02c4a43b1c97be91f8cc3', {
+          method: 'PUT',  // Use PUT to update the bin
           headers: {
-            'X-Master-Key': API_KEY,
+            'X-Master-Key': '$2a$10$EGk.IxPEfMopz.WZYNyz7eCaLNIuQxh/pX5fUsZlKPkvUnJSIiB1.',
             'Content-Type': 'application/json',
           },
           body: JSON.stringify(userData),
