--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       height: 100vh;
       margin: 0;
     }
-    #login-container, #menu, #register-container {
+    #login-container, #menu {
       background: #6a0dad;
       padding: 2rem;
       border-radius: 8px;
@@ -51,9 +51,6 @@
       margin-top: 0.5rem;
       min-height: 1.2rem;
     }
-    #register-container {
-      display: none;
-    }
   </style>
 </head>
 <body>
@@ -63,17 +60,6 @@
     <input id="password" type="password" placeholder="Password" autocomplete="off" />
     <button id="login-btn">Login</button>
     <div id="error-msg"></div>
-    <br />
-    <button id="register-btn">Register Here</button>
-  </div>
-
-  <div id="register-container">
-    <h2>Register</h2>
-    <input id="register-name" type="text" placeholder="Name" autocomplete="off" />
-    <input id="register-password" type="password" placeholder="Password" autocomplete="off" />
-    <input id="register-confirm-password" type="password" placeholder="Confirm Password" autocomplete="off" />
-    <button id="register-submit-btn">Register</button>
-    <div id="register-message"></div>
   </div>
 
   <div id="menu" style="display:none;">
@@ -81,52 +67,6 @@
     <button id="download-btn">Download run.bat</button>
   </div>
 
-  <script>
-    document.getElementById('login-btn').addEventListener('click', () => {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value;
-      const errorMsg = document.getElementById('error-msg');
-
-      if (!username || !password) {
-        errorMsg.textContent = 'Please fill in both fields.';
-        return;
-      }
-
-      if (username === "TestUser" && password === "TestPassword123") {
-        document.getElementById('login-container').style.display = 'none';
-        document.getElementById('menu').style.display = 'block';
-      } else {
-        errorMsg.textContent = 'Invalid username or password.';
-      }
-    });
-
-    document.getElementById('register-btn').addEventListener('click', () => {
-      document.getElementById('register-container').style.display = 'block';
-      document.getElementById('login-container').style.display = 'none';
-    });
-
-    document.getElementById('register-submit-btn').addEventListener('click', () => {
-      const name = document.getElementById('register-name').value.trim();
-      const password = document.getElementById('register-password').value;
-      const confirmPassword = document.getElementById('register-confirm-password').value;
-      const registerMessage = document.getElementById('register-message');
-      registerMessage.innerHTML = '';
-
-      if (!name || !password || !confirmPassword) {
-        registerMessage.classList.add('error');
-        registerMessage.innerHTML = 'Please fill in all fields.';
-        return;
-      }
-
-      if (password !== confirmPassword) {
-        registerMessage.classList.add('error');
-        registerMessage.innerHTML = 'Passwords do not match.';
-        return;
-      }
-
-      registerMessage.classList.add('success');
-      registerMessage.innerHTML = 'Registration successful!';
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
