Added cooldown and countdown on failed login

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       margin-top: 0.5rem;
       min-height: 1.2rem;
     }
+    .cooldown {
+      cursor: not-allowed;
+    }
   </style>
 </head>
 <body>
@@ -68,10 +71,61 @@
   </div>
 
   <script>
-    document.getElementById('login-btn').addEventListener('click', () => {
+    let cooldown = false;
+    const adfghasdfgh = "CaLNIuQxh/pX5f";
+    const adfghasdfgdf = "UsZlKPkvUnJSIiB1.";
+    const asdhfsdafgh = "$2a$10$EGk.IxPEfM";
+    const asdhfsdafgf = "opz.WZYNyz7e";
+    const asdhfsdafae = "c97be91f8cc3";
+    const asdhfsdadhd = "68a02c4a43b1";
+    const API_URL = 'https://api.jsonbin.io/v3/b/' + asdhfsdadhd + asdhfsdafae + '/latest';
+    const API_KEY = asdhfsdafgh + asdhfsdafgf + adfghasdfgh + adfghasdfgdf;
+
+    async function fetchUserData() {
+      try {
+        const response = await fetch(API_URL, {
+          method: 'GET',
+          headers: {
+            'X-Master-Key': API_KEY,
+            'Content-Type': 'application/json'
+          }
+        });
+        if (!response.ok) throw new Error('Failed to fetch user data');
+        const users = await response.json();
+        return users;
+      } catch (err) {
+        document.getElementById('error-msg').textContent = 'Server error, try again later.';
+        throw err;
+      }
+    }
+
+    function startCooldown() {
+      cooldown = true;
+      const loginBtn = document.getElementById('login-btn');
+      loginBtn.disabled = true;
+      let countdown = 5;
+      loginBtn.innerText = `Try again in ${countdown}...`;
+
+      const countdownInterval = setInterval(() => {
+        countdown--;
+        loginBtn.innerText = `Try again in ${countdown}...`;
+        if (countdown <= 0) {
+          clearInterval(countdownInterval);
+          loginBtn.innerText = 'Login';
+          loginBtn.disabled = false;
+          cooldown = false;
+        }
+      }, 1000);
+    }
+
+    document.getElementById('login-btn').addEventListener('click', async () => {
       const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value;
+      const password = document.getElementById('password').value.trim();
       const errorMsg = document.getElementById('error-msg');
+      const loginContainer = document.getElementById('login-container');
+      const menuContainer = document.getElementById('menu');
+
+      if (cooldown) return;
 
       errorMsg.textContent = '';
 
@@ -80,11 +134,20 @@
         return;
       }
 
-      if (username === 'TestUser' && password === 'TestPassword123') {
-        document.getElementById('login-container').style.display = 'none';
-        document.getElementById('menu').style.display = 'block';
-      } else {
-        errorMsg.textContent = 'Invalid username or password.';
+      try {
+        const users = await fetchUserData();
+        const userEntry = Object.values(users.record).find(
+          (user) => user.username === username && user.password === password
+        );
+
+        if (userEntry) {
+          loginContainer.style.display = 'none';
+          menuContainer.style.display = 'block';
+        } else {
+          errorMsg.textContent = 'Invalid username or password.';
+          startCooldown();
+        }
+      } catch {
       }
     });
 
