--- a/index.html
+++ b/index.html
@@ -1,159 +1,29 @@
+<!-- give all credit to elk https://github.com/3elk/Website-IP-Logger -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login - Scripty</title>
-  <style>
-    body {
-      background: #4b0082;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    #login-container, #menu {
-      background: #6a0dad;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #32006a;
-      width: 300px;
-      text-align: center;
-    }
-    input {
-      width: 90%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      border: none;
-      border-radius: 4px;
-      font-size: 1rem;
-    }
-    button {
-      background: #b19cd9;
-      border: none;
-      color: #4b0082;
-      padding: 0.7rem 1.2rem;
-      font-weight: bold;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 1rem;
-      font-size: 1rem;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #d1c4e9;
-    }
-    #error-msg {
-      color: #ff6b6b;
-      margin-top: 0.5rem;
-      min-height: 1.2rem;
-    }
-    .cooldown {
-      cursor: not-allowed;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E.L.K: 404 Error.</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="login-container">
-    <h2>Login</h2>
-    <input id="username" type="text" placeholder="Username" autocomplete="off" />
-    <input id="password" type="password" placeholder="Password" autocomplete="off" />
-    <button id="login-btn">Login</button>
-    <div id="error-msg"></div>
-  </div>
-
-  <div id="menu" style="display:none;">
-    <h2>Welcome!</h2>
-    <button id="download-btn">Download run.bat</button>
-  </div>
-
-  <script>
-    let cooldown = false;
-    const adfghasdfgh = "CaLNIuQxh/pX5f";
-    const adfghasdfgdf = "UsZlKPkvUnJSIiB1.";
-    const asdhfsdafgh = "$2a$10$EGk.IxPEfM";
-    const asdhfsdafgf = "opz.WZYNyz7e";
-    const asdhfsdafae = "c97be91f8cc3";
-    const asdhfsdadhd = "68a02c4a43b1";
-    const API_URL = 'https://api.jsonbin.io/v3/b/' + asdhfsdadhd + asdhfsdafae + '/latest';
-    const API_KEY = asdhfsdafgh + asdhfsdafgf + adfghasdfgh + adfghasdfgdf;
-
-    async function fetchUserData() {
-      try {
-        const response = await fetch(API_URL, {
-          method: 'GET',
-          headers: {
-            'X-Master-Key': API_KEY,
-            'Content-Type': 'application/json'
-          }
-        });
-        if (!response.ok) throw new Error('Failed to fetch user data');
-        const users = await response.json();
-        return users;
-      } catch (err) {
-        document.getElementById('error-msg').textContent = 'Server error, try again later.';
-        throw err;
-      }
-    }
-
-    function startCooldown() {
-      cooldown = true;
-      const loginBtn = document.getElementById('login-btn');
-      loginBtn.disabled = true;
-      let countdown = 5;
-      loginBtn.innerText = `Try again in ${countdown}...`;
-
-      const countdownInterval = setInterval(() => {
-        countdown--;
-        loginBtn.innerText = `Try again in ${countdown}...`;
-        if (countdown <= 0) {
-          clearInterval(countdownInterval);
-          loginBtn.innerText = 'Login';
-          loginBtn.disabled = false;
-          cooldown = false;
-        }
-      }, 1000);
-    }
-
-    document.getElementById('login-btn').addEventListener('click', async () => {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const errorMsg = document.getElementById('error-msg');
-      const loginContainer = document.getElementById('login-container');
-      const menuContainer = document.getElementById('menu');
-
-      if (cooldown) return;
-
-      errorMsg.textContent = '';
-
-      if (!username || !password) {
-        errorMsg.textContent = 'Please fill in both fields.';
-        return;
-      }
-
-      try {
-        const users = await fetchUserData();
-        const userEntry = Object.values(users.record).find(
-          (user) => user.username === username && user.password === password
-        );
-
-        if (userEntry) {
-          loginContainer.style.display = 'none';
-          menuContainer.style.display = 'block';
-        } else {
-          errorMsg.textContent = 'Invalid username or password.';
-          startCooldown();
-        }
-      } catch {
-      }
-    });
-
-    document.getElementById('download-btn').addEventListener('click', () => {
-      window.location.href = 'run.bat';
-    });
-  </script>
+    <div class="container">
+        <h1>404 - Page Not Found :(</h1>
+        <p>Oops! The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+        <div class="search-bar">
+            <input type="text" placeholder="Type here . . ." />
+        </div>
+        <p>
+            <a href="https://3elk.github.io/JumpScare-Spam/">Visit our homepage</a> | 
+            <a href="https://3elk.github.io/JumpScare-Spam/">Check out our latest articles</a> | 
+            <a href="https://3elk.github.io/JumpScare-Spam/">Browse our FAQs</a>
+        </p> <!-- all links changeable -->
+    </div>
+    <script defer src="script.js"></script>
+    <footer>
+        © 2025 Elasticsearch, Logstash, and Kibana Computing. All rights reserved. <br>
+        Contact us: <a href="https://3elk.github.io/JumpScare-Spam/">support@elkcomputing.com</a> <!-- all changeable-->
+    </footer>
 </body>
 </html>
