--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- give all credit to elk https://github.com/3elk/Website-IP-Logger -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,15 +15,15 @@
             <input type="text" placeholder="Type here . . ." />
         </div>
         <p>
-            <a href="https://3elk.github.io/JumpScare-Spam/">Visit our homepage</a> | 
-            <a href="https://3elk.github.io/JumpScare-Spam/">Check out our latest articles</a> | 
-            <a href="https://3elk.github.io/JumpScare-Spam/">Browse our FAQs</a>
+            <a href="https://www.youtube.com/">Visit our homepage</a> | 
+            <a href="https://www.youtube.com/">Check out our latest articles</a> | 
+            <a href="https://www.youtube.com/">Browse our FAQs</a>
         </p> <!-- all links changeable -->
     </div>
     <script defer src="script.js"></script>
     <footer>
         © 2025 Elasticsearch, Logstash, and Kibana Computing. All rights reserved. <br>
-        Contact us: <a href="https://3elk.github.io/JumpScare-Spam/">support@elkcomputing.com</a> <!-- all changeable-->
+        Contact us: <a href="https://www.youtube.com/">skibidi1703@centrum.sk</a> <!-- all changeable-->
     </footer>
 </body>
 </html>
