--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <input type="text" placeholder="Type here . . ." />
         </div>
         <p>
-            <a href="https://www.youtube.com/">Visit our homepage</a> | 
-            <a href="https://www.youtube.com/">Check out our latest articles</a> | 
-            <a href="https://www.youtube.com/">Browse our FAQs</a>
-        </p> <!-- all links changeable -->
+            <a href="https://discord.gg/zTxAfsDJs8">Visit our homepage</a> | 
+            <a href="https://discord.gg/zTxAfsDJs8">Check out our latest articles</a> | 
+            <a href="https://discord.gg/zTxAfsDJs8">Browse our FAQs</a>
+        </p>
     </div>
     <script defer src="script.js"></script>
     <footer>
         © 2025 Elasticsearch, Logstash, and Kibana Computing. All rights reserved. <br>
-        Contact us: <a href="https://www.youtube.com/">skibidi1703@centrum.sk</a> <!-- all changeable-->
+        Contact us: <a href="https://discord.gg/zTxAfsDJs8">skibidi1703@centrum.sk</a>
     </footer>
 </body>
 </html>
