--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E.L.K: 404 Error.</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>E.L.K: 404 Error.</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>404 - Page Not Found :(</h1>
-        <p>Oops! The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-        <div class="search-bar">
-            <input type="text" placeholder="Type here . . ." />
-        </div>
-        <p>
-            <a href="https://discord.gg/zTxAfsDJs8">Visit our homepage</a> | 
-            <a href="https://discord.gg/zTxAfsDJs8">Check out our latest articles</a> | 
-            <a href="https://discord.gg/zTxAfsDJs8">Browse our FAQs</a>
-        </p>
+  <div class="container">
+    <h1>404 - Page Not Found 😞</h1>
+    <p>Oops! The page you are looking for might have been removed,<br>renamed, or is temporarily unavailable.</p>
+    
+    <div class="search-bar">
+      <input type="text" placeholder="Search the site..." aria-label="Search" />
+      <button aria-label="Search button">🔍</button>
     </div>
-    <script defer src="script.js"></script>
-    <footer>
-        © 2025 Elasticsearch, Logstash, and Kibana Computing. All rights reserved. <br>
-        Contact us: <a href="https://discord.gg/zTxAfsDJs8">skibidi1703@centrum.sk</a>
-    </footer>
+
+    <nav>
+      <a href="https://discord.gg/zTxAfsDJs8" class="btn">Homepage</a>
+      <a href="https://discord.gg/zTxAfsDJs8" class="btn">Latest Articles</a>
+      <a href="https://discord.gg/zTxAfsDJs8" class="btn">FAQs</a>
+    </nav>
+  </div>
+
+  <footer>
+    © 2025 Elasticsearch, Logstash, and Kibana Computing. All rights reserved.<br />
+    Contact us: <a href="https://discord.gg/zTxAfsDJs8">skibidi1703@centrum.sk</a>
+  </footer>
+
+  <script defer src="script.js"></script>
 </body>
 </html>
