--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>404 - Page Not Found 😞</h1>
+    <h1>404 - Page Not Found</h1>
     <p>Oops! The page you are looking for might have been removed,<br>renamed, or is temporarily unavailable.</p>
     
     <div class="search-bar">
