--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </div>
 
   <footer>
-    © 2025 Elasticsearch, Logstash, and Kibana Computing. All rights reserved.<br />
-    Contact us: <a href="https://discord.gg/zTxAfsDJs8">skibidi1703@centrum.sk</a>
+    © 2025 Skibidi Computing. All rights reserved.<br />
+    Contact us: <a href="https://discord.gg/zTxAfsDJs8">"click for contact</a>
   </footer>
 
   <script defer src="script.js"></script>
