--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <footer>
     © 2025 Skibidi Computing. All rights reserved.<br />
-    Contact us: <a href="https://discord.gg/zTxAfsDJs8">"click for contact</a>
+    Contact us: <a href="https://discord.gg/zTxAfsDJs8">click for contact</a>
   </footer>
 
   <script defer src="script.js"></script>
