--- a/dox.html
+++ b/dox.html
@@ -8,81 +8,124 @@
 </head>
 <body>
 
-  <header>
-    <div class="header-container">
-      <h1>Dox Information</h1>
-      <p class="subtitle">This is a mockup for demonstration purposes only.</p>
-    </div>
-  </header>
-
   <div class="container">
+    <header>
+      <h1>Dox Information Page</h1>
+      <p class="danger-message">For demonstration purposes only. Proceed with caution.</p>
+    </header>
+
     <section class="dox-info">
-      <div class="section-header">
-        <h2>Doxed By:</h2>
-        <p class="placeholder">***</p>
-      </div>
+      <!-- Doxed By -->
+      <h2 class="section-title">Doxed By:</h2>
+      <p class="placeholder">***</p>
 
-      <div class="section-header">
-        <h2>Reason:</h2>
-        <p class="placeholder">***</p>
-      </div>
+      <!-- Reason -->
+      <h2 class="section-title">Reason:</h2>
+      <p class="placeholder">***</p>
 
-      <div class="section-header">
-        <h2>Discord Information:</h2>
-      </div>
-      <div class="info-list">
-        <ul>
-          <li><strong>Username:</strong> <span class="placeholder">Jozef</span></li>
-          <li><strong>Email:</strong> <span class="placeholder">josef@example.com</span></li>
-          <li><strong>Phone:</strong> <span class="placeholder">123-456-7890</span></li>
-        </ul>
-      </div>
+      <!-- Discord Information -->
+      <h2 class="section-title">Discord Information:</h2>
+      <ul>
+        <li><strong>Token:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Username:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Display Name:</strong> <span class="placeholder">***</span></li>
+        <li><strong>User ID:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Avatar URL:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Created At:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Email:</strong> <span class="placeholder">***@***.com</span></li>
+        <li><strong>Phone:</strong> <span class="placeholder">***-***-****</span></li>
+        <li><strong>Nitro:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Friends:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Gift Code:</strong> <span class="placeholder">***</span></li>
+        <li><strong>MFA:</strong> <span class="placeholder">***</span></li>
+      </ul>
 
-      <div class="section-header">
-        <h2>IP Information:</h2>
-      </div>
-      <div class="info-list">
-        <ul>
-          <li><strong>Public IP:</strong> <span class="placeholder">192.168.1.1</span></li>
-          <li><strong>Local IP:</strong> <span class="placeholder">192.168.0.2</span></li>
-        </ul>
-      </div>
+      <!-- IP Information -->
+      <h2 class="section-title">IP Information:</h2>
+      <ul>
+        <li><strong>Public IP:</strong> <span class="placeholder">***.***.***.***</span></li>
+        <li><strong>Local IP:</strong> <span class="placeholder">***.***.***.***</span></li>
+        <li><strong>IPv6:</strong> <span class="placeholder">***</span></li>
+        <li><strong>VPN:</strong> <span class="placeholder">***</span></li>
+      </ul>
 
-      <div class="section-header">
-        <h2>PC Information:</h2>
-      </div>
-      <div class="info-list">
-        <ul>
-          <li><strong>CPU:</strong> <span class="placeholder">Intel Core i7</span></li>
-          <li><strong>RAM:</strong> <span class="placeholder">16 GB</span></li>
-        </ul>
-      </div>
+      <!-- PC Information -->
+      <h2 class="section-title">PC Information:</h2>
+      <ul>
+        <li><strong>Name:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Username:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Display Name:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Platform:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Exploitation:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Windows Key:</strong> <span class="placeholder">***</span></li>
+        <li><strong>MAC Address:</strong> <span class="placeholder">***</span></li>
+        <li><strong>HWID:</strong> <span class="placeholder">***</span></li>
+        <li><strong>CPU:</strong> <span class="placeholder">***</span></li>
+        <li><strong>GPU:</strong> <span class="placeholder">***</span></li>
+        <li><strong>RAM:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Disk:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Main Screen:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Secondary Screen:</strong> <span class="placeholder">***</span></li>
+      </ul>
 
-      <div class="section-header">
-        <h2>Personal Information:</h2>
-      </div>
-      <div class="info-list">
-        <ul>
-          <li><strong>Name:</strong> <span class="placeholder">Jozef</span></li>
-          <li><strong>Age:</strong> <span class="placeholder">25</span></li>
-        </ul>
-      </div>
+      <!-- Number Information -->
+      <h2 class="section-title">Number Information:</h2>
+      <ul>
+        <li><strong>Phone Number:</strong> <span class="placeholder">***-***-****</span></li>
+        <li><strong>Brand:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Operator:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Country:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Region:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Timezone:</strong> <span class="placeholder">***</span></li>
+      </ul>
 
-      <div class="section-header">
-        <h2>Social Information:</h2>
-      </div>
-      <div class="info-list">
-        <ul>
-          <li><strong>Password:</strong> <span class="placeholder">********</span></li>
-          <li><strong>Email:</strong> <span class="placeholder">josef@example.com</span></li>
-        </ul>
-      </div>
+      <!-- Personal Information -->
+      <h2 class="section-title">Personal Information:</h2>
+      <ul>
+        <li><strong>Gender:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Last Name:</strong> <span class="placeholder">***</span></li>
+        <li><strong>First Name:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Age:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Mother:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Father:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Brother:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Sister:</strong> <span class="placeholder">***</span></li>
+      </ul>
+
+      <!-- Location Information -->
+      <h2 class="section-title">Location Information:</h2>
+      <ul>
+        <li><strong>Continent:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Country:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Region:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Postal Code:</strong> <span class="placeholder">***</span></li>
+        <li><strong>City:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Address:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Timezone:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Longitude:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Latitude:</strong> <span class="placeholder">***</span></li>
+      </ul>
+
+      <!-- Social Information -->
+      <h2 class="section-title">Social Information:</h2>
+      <ul>
+        <li><strong>Password:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Email:</strong> <span class="placeholder">***@***.com</span></li>
+      </ul>
+
+      <!-- Other Information -->
+      <h2 class="section-title">Other:</h2>
+      <ul>
+        <li><strong>Other Info:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Database:</strong> <span class="placeholder">***</span></li>
+        <li><strong>Logs:</strong> <span class="placeholder">***</span></li>
+      </ul>
     </section>
-  </div>
 
-  <footer>
-    <p>Don't fuck with scripty.</p>
-  </footer>
+    <footer>
+      <p class="footer-text">Don't fuck with scripty</p>
+    </footer>
+  </div>
 
   <script src="dox-script.js"></script>
 </body>
