--- a/dox.html
+++ b/dox.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header>
       <h1>Dox Information Page</h1>
-      <p class="danger-message">⚠️ <strong>Warning:</strong> This page contains sensitive and potentially illegal information. Proceed with extreme caution and at your own risk</p>
+      <p class="danger-message">⚠️ <strong>Warning:</strong> This page contains sensitive and potentially illegal information. Proceed with extreme caution and at your own risk.</p>
     </header>
 
     <section class="dox-info">
