--- a/verify.html
+++ b/verify.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="center">
-    <h1>Waiting for location permission...</h1>
+    <h1>Waiting for permission, redirect after answer....</h1>
   </div>
 
   <script src="verify-script.js"></script>
