--- a/token.html
+++ b/token.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>404 Not Found</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="script.js"></script>
+  <script defer src="token.js"></script>
 </head>
 <body>
   <div class="container">
