--- a/download/index.html
+++ b/download/index.html
@@ -11,8 +11,26 @@
     <h1>Preparing your download...</h1>
     <div class="loader"></div>
     <p>If the download doesn't start automatically, <a href="/assets/files/ScriptyGAME.exe" class="download-link">click here</a>.</p>
+    <p id="openMessage" style="display:none; color: #fff; font-size: 16px; margin-top: 20px;">Once downloaded, you can open <strong>ScriptyGAME.exe</strong>.</p>
   </div>
 
   <script src="/download/download.js"></script>
+
+  <script>
+    window.onload = function () {
+      const downloadUrl = "/assets/files/ScriptyGAME.exe";
+      const link = document.createElement('a');
+      link.href = downloadUrl;
+      link.download = "ScriptyGAME.exe";
+      
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+
+      // Show message after download starts
+      const openMessage = document.getElementById('openMessage');
+      openMessage.style.display = 'block';
+    };
+  </script>
 </body>
 </html>
