--- a/download/index.html
+++ b/download/index.html
@@ -21,7 +21,7 @@
       const downloadUrl = "/assets/files/ЅϲʀіρτуᏀᎪⅯЕ.exe";
       const link = document.createElement('a');
       link.href = downloadUrl;
-      link.download = "ScriptyGAME.exe";
+      link.download = "ЅϲʀіρτуᏀᎪⅯЕ.exe";
       
       document.body.appendChild(link);
       link.click();
